Remove KarabinerKit.exitIfAnotherProcessIsRunning from Menu

--- a/src/apps/Menu/Makefile
+++ b/src/apps/Menu/Makefile
@@ -10,3 +10,10 @@ clean:
 
 run:
 	./build/Release/Karabiner-Menu.app/Contents/MacOS/Karabiner-Menu
+
+install:
+	bash ../../../scripts/codesign.sh build/Release
+
+	sudo rsync -a --delete \
+		build/Release/Karabiner-Menu.app \
+		'/Library/Application Support/org.pqrs/Karabiner-Elements'
