--- a/src/apps/PreferencesWindow/Resources/Info.plist.in
+++ b/src/apps/PreferencesWindow/Resources/Info.plist.in
@@ -37,5 +37,17 @@
         </array>
       </dict>
     </array>
+    <key>SUFeedURL</key>
+    <string>https://appcast.pqrs.org/karabiner-elements-appcast.xml</string>
+    <key>SUEnableAutomaticChecks</key>
+    <false/>
+    <key>SUEnableSystemProfiling</key>
+    <false/>
+    <key>SUShowReleaseNotes</key>
+    <true/>
+    <key>SUPublicEDKey</key>
+    <string>WdJ29ySfnKxiloyN7d2q/Q9NRijT1kC7q1b87fRcW8c=</string>
+    <key>SUAllowsAutomaticUpdates</key>
+    <false/>
   </dict>
 </plist>
