Fix Autoupdate.app icon

--- a/src/apps/PreferencesWindow/Makefile
+++ b/src/apps/PreferencesWindow/Makefile
@@ -3,6 +3,7 @@ all:
 	make -C ../lib/KarabinerKit
 	bash run-xcodegen.sh
 	xcodebuild -configuration Release -alltargets SYMROOT="$(CURDIR)/build"
+	install -m 644 ../share/Resources/app.icns build/Release/Karabiner-Elements.app/Contents/Frameworks/Sparkle.framework/Versions/A/Resources/Autoupdate.app/Contents/Resources/AppIcon.icns
 
 clean:
 	rm -fr *.xcodeproj
