Hide Dock icon when PreferencesWindow is updater mode

--- a/src/apps/PreferencesWindow/Resources/Info.plist.in
+++ b/src/apps/PreferencesWindow/Resources/Info.plist.in
@@ -26,6 +26,8 @@
     <string>MainMenu</string>
     <key>NSPrincipalClass</key>
     <string>NSApplication</string>
+    <key>LSUIElement</key>
+    <true/>
     <key>CFBundleURLTypes</key>
     <array>
       <dict>
