--- a/tests/src/types/CMakeLists.txt
+++ b/tests/src/types/CMakeLists.txt
@@ -14,6 +14,7 @@ add_executable(
   src/mouse_key_test.cpp
   src/operation_type_test.cpp
   src/pointing_motion_test.cpp
+  src/software_function_test.cpp
   src/test.cpp
 )
 
