Add -framework CoreGraphics to tests

--- a/tests/src/manipulator/CMakeLists.txt
+++ b/tests/src/manipulator/CMakeLists.txt
@@ -15,6 +15,7 @@ target_link_libraries(
   karabiner_test
   test_runner
   "-framework CoreFoundation"
+  "-framework CoreGraphics"
 )
 
 add_executable(
@@ -26,4 +27,5 @@ target_link_libraries(
   overwrite_expected_results
   test_runner
   "-framework CoreFoundation"
+  "-framework CoreGraphics"
 )
