--- a/tests/src/post_event_to_virtual_devices/CMakeLists.txt
+++ b/tests/src/post_event_to_virtual_devices/CMakeLists.txt
@@ -14,6 +14,7 @@ target_link_libraries(
   karabiner_test
   test_runner
   "-framework CoreFoundation"
+  "-framework CoreGraphics"
 )
 
 add_executable(
@@ -25,4 +26,5 @@ target_link_libraries(
   overwrite_expected_results
   test_runner
   "-framework CoreFoundation"
+  "-framework CoreGraphics"
 )
