Use macos-11 in GitHub actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 jobs:
   build:
-    runs-on: macOS-latest
+    runs-on: macos-11
 
     steps:
       - uses: actions/checkout@v2
