--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -23,7 +23,7 @@ on:
 jobs:
   analyze:
     name: Analyze
-    runs-on: macOS-latest
+    runs-on: macos-11
     permissions:
       actions: read
       contents: read
@@ -43,7 +43,7 @@ jobs:
       with:
         submodules: recursive
     - name: xcode-select
-      run: sudo xcode-select -s /Applications/Xcode_12.app
+      run: sudo xcode-select -s /Applications/Xcode_13.0_beta.app
     - name: brew install
       run: brew install xcodegen
 
