Add update-version.py into Makefile

--- a/src/bin/cli/Makefile
+++ b/src/bin/cli/Makefile
@@ -1,4 +1,5 @@
 all:
+	python3 ../../../scripts/update-version.py
 	xcodegen generate
 	xcodebuild -configuration Release -alltargets SYMROOT="$(CURDIR)/build"
 
