--- a/src/core/grabber/Makefile
+++ b/src/core/grabber/Makefile
@@ -1,4 +1,5 @@
 all:
+	python3 ../../../scripts/update-version.py
 	xcodegen generate
 	xcodebuild -configuration Release -alltargets SYMROOT="$(CURDIR)/build"
 
