--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -43,7 +43,7 @@ jobs:
       with:
         submodules: recursive
     - name: xcode-select
-      run: sudo xcode-select -s /Applications/Xcode_13.0_beta.app
+      run: sudo xcode-select -s /Applications/Xcode_13.1.app
     - name: brew install
       run: brew install xcodegen
 
