--- a/src/bin/cli/project.yml
+++ b/src/bin/cli/project.yml
@@ -19,7 +19,7 @@ targets:
         compilerFlags:
           - -Wall
           - -Werror
-          - '-std=gnu++2a'
+          - '-std=c++20'
       - path: ../../vendor/cget/src/pqrs/osx/process_info
     dependencies:
       - framework: CoreServices.framework
