--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -23,7 +23,7 @@ on:
 jobs:
   analyze:
     name: Analyze
-    runs-on: macos-12
+    runs-on: macos-11
     permissions:
       actions: read
       contents: read
@@ -42,8 +42,8 @@ jobs:
       uses: actions/checkout@v2
       with:
         submodules: recursive
-    - name: xcode-select
-      run: sudo xcode-select -s /Applications/Xcode_13.3.app
+#    - name: xcode-select
+#      run: sudo xcode-select -s /Applications/Xcode_13.3.app
     - name: brew install
       run: brew install xcodegen
 
