Use LibKrbn.Settings

--- a/src/apps/Menu/project.yml
+++ b/src/apps/Menu/project.yml
@@ -26,6 +26,10 @@ targets:
         compilerFlags:
           - -Wall
           - -Werror
+      - path: ../share/swift
+        compilerFlags:
+          - -Wall
+          - -Werror
       - path: ../../vendor/cget/src/pqrs/osx/process_info
       - path: Resources
         excludes:
