--- a/src/apps/MultitouchExtension/Makefile
+++ b/src/apps/MultitouchExtension/Makefile
@@ -8,5 +8,8 @@ clean:
 	rm -fr *.xcodeproj
 	rm -fr build
 
+xcode:
+	open *.xcodeproj
+
 run:
 	./build/Release/Karabiner-MultitouchExtension.app/Contents/MacOS/Karabiner-MultitouchExtension --show-ui
