--- a/src/apps/EventViewer/project.yml
+++ b/src/apps/EventViewer/project.yml
@@ -32,6 +32,7 @@ targets:
         compilerFlags:
           - -Wall
           - -Werror
+      - path: ../../vendor/cget/src/pqrs/osx/process_info
       - path: Resources
         excludes:
           - .gitignore
