--- a/src/core/grabber/project.yml
+++ b/src/core/grabber/project.yml
@@ -22,6 +22,7 @@ targets:
           - -Werror
           - '-std=c++20'
       - path: ../../vendor/cget/src/pqrs/osx/process_info
+      - path: ../../vendor/cget/src/pqrs/osx/workspace/impl/objc.m
     dependencies:
       - framework: CoreGraphics.framework
       - framework: CoreServices.framework
