--- a/src/apps/NotificationWindow/project.yml
+++ b/src/apps/NotificationWindow/project.yml
@@ -26,6 +26,10 @@ targets:
         compilerFlags:
           - -Wall
           - -Werror
+      - path: ../share/swift
+        compilerFlags:
+          - -Wall
+          - -Werror
       - path: Resources
         excludes:
           - .gitignore
