--- a/files/LaunchAgents/org.pqrs.karabiner.NotificationWindow.plist
+++ b/files/LaunchAgents/org.pqrs.karabiner.NotificationWindow.plist
@@ -4,6 +4,8 @@
   <dict>
     <key>Label</key>
     <string>org.pqrs.karabiner.NotificationWindow</string>
+    <key>AssociatedBundleIdentifiers</key>
+    <string>org.pqrs.Karabiner-Elements.Preferences</string>
     <key>Disabled</key>
     <true/>
     <key>KeepAlive</key>
