--- a/tests/src/async_file_writer/CMakeLists.txt
+++ b/tests/src/async_file_writer/CMakeLists.txt
@@ -1,10 +1,15 @@
-cmake_minimum_required (VERSION 3.9)
+cmake_minimum_required(VERSION 3.9)
 
-include (../../tests.cmake)
+include(../../tests.cmake)
 
-project (karabiner_test)
+project(karabiner_test)
 
 add_executable(
   karabiner_test
   src/test.cpp
+)
+
+target_link_libraries(
+  karabiner_test
+  "-framework CoreFoundation"
 )
