--- a/tests/src/post_event_to_virtual_devices/CMakeLists.txt
+++ b/tests/src/post_event_to_virtual_devices/CMakeLists.txt
@@ -9,7 +9,17 @@ add_executable(
   src/test.cpp
 )
 
+target_link_libraries(
+  karabiner_test
+  "-framework CoreFoundation"
+)
+
 add_executable(
   overwrite_expected_results
   src/overwrite_expected_results.cpp
+)
+
+target_link_libraries(
+  overwrite_expected_results
+  "-framework CoreFoundation"
 )
