--- a/files/LaunchAgents/org.pqrs.karabiner.karabiner_console_user_server.plist
+++ b/files/LaunchAgents/org.pqrs.karabiner.karabiner_console_user_server.plist
@@ -5,7 +5,7 @@
     <key>Label</key>
     <string>org.pqrs.karabiner.karabiner_console_user_server</string>
     <key>AssociatedBundleIdentifiers</key>
-    <string>org.pqrs.Karabiner-Elements.Preferences</string>
+    <string>org.pqrs.Karabiner-Elements.Settings</string>
     <key>Disabled</key>
     <true/>
     <key>KeepAlive</key>
