--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -42,8 +42,8 @@ jobs:
       uses: actions/checkout@v2
       with:
         submodules: recursive
-    - name: xcode-select
-      run: sudo xcode-select -s /Applications/Xcode_14.2.app
+#    - name: xcode-select
+#      run: sudo xcode-select -s /Applications/Xcode_14.2.app
     - name: brew install
       run: brew install xcodegen
 
