--- a/src/apps/SettingsWindow/Makefile
+++ b/src/apps/SettingsWindow/Makefile
@@ -26,3 +26,4 @@ install:
 	sudo rsync -a --delete \
 		build/Release/Karabiner-Elements.app \
 		/Applications
+	sudo chown -R root:wheel /Applications/Karabiner-Elements.app
