Move icon thumbnails to share/Resources/icons

--- a/src/apps/AppIconSwitcher/project.yml
+++ b/src/apps/AppIconSwitcher/project.yml
@@ -20,3 +20,5 @@ targets:
           - .gitignore
           - '*.plist.in'
       - path: ../share/Resources/icons
+        excludes:
+          - '*.png'
