--- a/src/apps/SettingsWindow/project-base.yml
+++ b/src/apps/SettingsWindow/project-base.yml
@@ -42,5 +42,8 @@ targets:
           - '*.orig.png'
           - '*.plist.in'
       - path: ../share/Resources/app.icns
+      - path: ../share/Resources/icons
+        excludes:
+          - '*.icns'
     dependencies:
       - sdk: libc++.tbd
