--- a/src/apps/Menu/project.yml
+++ b/src/apps/Menu/project.yml
@@ -17,6 +17,7 @@ targets:
         - -L../../lib/libkrbn/build/Release
         - -lKarabinerKit
         - -lkrbn
+      OTHER_SWIFT_FLAGS: '-warnings-as-errors'
       SWIFT_OBJC_BRIDGING_HEADER: src/Bridging-Header.h
     type: application
     platform: macOS
