--- a/src/apps/MultitouchExtension/project.yml
+++ b/src/apps/MultitouchExtension/project.yml
@@ -17,6 +17,7 @@ targets:
         - -L../../lib/libkrbn/build/Release
         - -lKarabinerKit
         - -lkrbn
+      OTHER_SWIFT_FLAGS: '-warnings-as-errors'
     type: application
     platform: macOS
     deploymentTarget: 11.0
