--- a/src/apps/MultitouchExtension/project.yml
+++ b/src/apps/MultitouchExtension/project.yml
@@ -18,6 +18,7 @@ targets:
         - -lKarabinerKit
         - -lkrbn
       OTHER_SWIFT_FLAGS: '-warnings-as-errors'
+      SWIFT_OBJC_BRIDGING_HEADER: src/Bridging-Header.h
     type: application
     platform: macOS
     deploymentTarget: 11.0
