update-version.py -> update_version.py

--- a/src/apps/SettingsWindow/Makefile
+++ b/src/apps/SettingsWindow/Makefile
@@ -1,5 +1,5 @@
 all:
-	python3 ../../../scripts/update-version.py
+	python3 ../../../scripts/update_version.py
 	make -C ../../lib/libkrbn
 	bash run-xcodegen.sh
 	xcodebuild -configuration Release -alltargets SYMROOT="$(CURDIR)/build"
