--- a/src/core/console_user_server/Makefile
+++ b/src/core/console_user_server/Makefile
@@ -1,5 +1,5 @@
 all:
-	python3 ../../../scripts/update-version.py
+	python3 ../../../scripts/update_version.py
 	xcodegen generate
 	xcodebuild -configuration Release -alltargets SYMROOT="$(CURDIR)/build"
 
