--- a/src/apps/EventViewer/project.yml
+++ b/src/apps/EventViewer/project.yml
@@ -12,8 +12,6 @@ targets:
       CODE_SIGN_ENTITLEMENTS: ''
       CODE_SIGN_IDENTITY: '-'
       CODE_SIGN_STYLE: Manual
-      SYSTEM_HEADER_SEARCH_PATHS:
-        - ../../vendor/cget/include
       HEADER_SEARCH_PATHS:
         - ../../lib/libkrbn/include
       OTHER_LDFLAGS:
@@ -21,6 +19,8 @@ targets:
         - -lkrbn
       OTHER_SWIFT_FLAGS: '-warnings-as-errors'
       SWIFT_OBJC_BRIDGING_HEADER: src/Bridging-Header.h
+      SYSTEM_HEADER_SEARCH_PATHS:
+        - ../../vendor/cget/include
     type: application
     platform: macOS
     deploymentTarget: 11.0
@@ -33,6 +33,7 @@ targets:
         compilerFlags:
           - -Wall
           - -Werror
+      - path: ../../vendor/cget/src/pqrs/osx/frontmost_application_monitor
       - path: ../../vendor/cget/src/pqrs/osx/process_info
       - path: Resources
         excludes:
