--- a/src/apps/SettingsWindow/project-base.yml
+++ b/src/apps/SettingsWindow/project-base.yml
@@ -12,15 +12,16 @@ targets:
         CODE_SIGN_ENTITLEMENTS: ''
         CODE_SIGN_IDENTITY: '-'
         CODE_SIGN_STYLE: Manual
-        SYSTEM_HEADER_SEARCH_PATHS:
-          - ../../vendor/cget/include
         HEADER_SEARCH_PATHS:
           - ../../lib/libkrbn/include
         OTHER_LDFLAGS:
           - -L../../lib/libkrbn/build/Release
           - -lkrbn
         OTHER_SWIFT_FLAGS: '-warnings-as-errors'
-        SWIFT_OBJC_BRIDGING_HEADER: src/Bridging-Header.h
+        SWIFT_OBJC_BRIDGING_HEADER:
+          - src/Bridging-Header.h
+        SYSTEM_HEADER_SEARCH_PATHS:
+          - ../../vendor/cget/include
     type: application
     platform: macOS
     deploymentTarget: 11.0
