--- a/src/core/grabber/project.yml
+++ b/src/core/grabber/project.yml
@@ -6,12 +6,14 @@ targets:
       CODE_SIGN_ENTITLEMENTS: ''
       CODE_SIGN_IDENTITY: '-'
       CODE_SIGN_STYLE: Manual
-      SYSTEM_HEADER_SEARCH_PATHS:
-        - ../../vendor/cget/include
-        - ../../vendor/Karabiner-DriverKit-VirtualHIDDevice/include
       HEADER_SEARCH_PATHS:
         - include
         - ../../share
+      OTHER_SWIFT_FLAGS: '-warnings-as-errors'
+      SWIFT_OBJC_BRIDGING_HEADER: swift/Bridging-Header.h
+      SYSTEM_HEADER_SEARCH_PATHS:
+        - ../../vendor/cget/include
+        - ../../vendor/Karabiner-DriverKit-VirtualHIDDevice/include
     type: tool
     platform: macOS
     deploymentTarget: 11.0
@@ -22,7 +24,7 @@ targets:
           - -Werror
           - '-std=c++20'
       - path: ../../vendor/cget/src/pqrs/osx/process_info
-      - path: ../../vendor/cget/src/pqrs/osx/workspace/impl/objc.m
+      - path: ../../vendor/cget/src/pqrs/osx/workspace
     dependencies:
       - framework: CoreGraphics.framework
       - framework: CoreServices.framework
