--- a/src/core/observer/project.yml
+++ b/src/core/observer/project.yml
@@ -6,12 +6,14 @@ targets:
       CODE_SIGN_ENTITLEMENTS: ''
       CODE_SIGN_IDENTITY: '-'
       CODE_SIGN_STYLE: Manual
-      SYSTEM_HEADER_SEARCH_PATHS:
-        - ../../vendor/cget/include
-        - ../../vendor/Karabiner-DriverKit-VirtualHIDDevice/include
       HEADER_SEARCH_PATHS:
         - include
         - ../../share
+      OTHER_SWIFT_FLAGS: '-warnings-as-errors'
+      SWIFT_OBJC_BRIDGING_HEADER: swift/Bridging-Header.h
+      SYSTEM_HEADER_SEARCH_PATHS:
+        - ../../vendor/cget/include
+        - ../../vendor/Karabiner-DriverKit-VirtualHIDDevice/include
     type: tool
     platform: macOS
     deploymentTarget: 11.0
