Support module in duktape_utility::eval_file

--- a/tests/src/duktape_utility/CMakeLists.txt
+++ b/tests/src/duktape_utility/CMakeLists.txt
@@ -1,11 +1,12 @@
-cmake_minimum_required (VERSION 3.9)
+cmake_minimum_required(VERSION 3.9)
 
-include (../../tests.cmake)
+include(../../tests.cmake)
 
-project (karabiner_test)
+project(karabiner_test)
 
 include_directories(${CMAKE_CURRENT_LIST_DIR}/../../../src/vendor/duktape-2.7.0/src)
 include_directories(${CMAKE_CURRENT_LIST_DIR}/../../../src/vendor/duktape-2.7.0/extras/console)
+include_directories(${CMAKE_CURRENT_LIST_DIR}/../../../src/vendor/duktape-2.7.0/extras/module-node)
 
 # Suppress duktape warnings
 add_compile_options(-Wno-deprecated-declarations)
@@ -16,5 +17,5 @@ add_executable(
   src/test.cpp
   ../../../src/vendor/duktape-2.7.0/src/duktape.c
   ../../../src/vendor/duktape-2.7.0/extras/console/duk_console.c
-  ../../../src/vendor/duktape-2.7.0/extras/module-duktape/duk_module_duktape.c
+  ../../../src/vendor/duktape-2.7.0/extras/module-node/duk_module_node.c
 )
