--- a/src/bin/cli/project.yml
+++ b/src/bin/cli/project.yml
@@ -10,6 +10,7 @@ targets:
         - ../../share
         - ../../vendor/duktape-2.7.0/src
         - ../../vendor/duktape-2.7.0/extras/console
+        - ../../vendor/duktape-2.7.0/extras/module-node
       OTHER_SWIFT_FLAGS: '-warnings-as-errors'
       SWIFT_OBJC_BRIDGING_HEADER:
         - ../../vendor/cget/include/pqrs/osx/process_info/impl/Bridging-Header.h
@@ -27,5 +28,5 @@ targets:
           - '-std=c++20'
       - path: ../../vendor/duktape-2.7.0/src/duktape.c
       - path: ../../vendor/duktape-2.7.0/extras/console/duk_console.c
-      - path: ../../vendor/duktape-2.7.0/extras/module-duktape/duk_module_duktape.c
+      - path: ../../vendor/duktape-2.7.0/extras/module-node/duk_module_node.c
       - path: ../../vendor/cget/src/pqrs/osx/process_info
