--- a/src/apps/SettingsWindow/project-base.yml
+++ b/src/apps/SettingsWindow/project-base.yml
@@ -3,6 +3,9 @@ packages:
   Sparkle:
     url: https://github.com/sparkle-project/Sparkle
     from: 2.4.2
+  CodeEditor:
+    url: https://github.com/ZeeZide/CodeEditor
+    from: 1.2.2
 
 targets:
   Karabiner-Elements:
@@ -46,3 +49,4 @@ targets:
           - '*.icns'
     dependencies:
       - sdk: libc++.tbd
+      - package: CodeEditor
