Fix typo in .swiftlint.yml

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -22,7 +22,7 @@ function_body_length:
   warning: 1200
   error: 1500
 
-function_parmeter_count:
+function_parameter_count:
   warning: 10
   error: 20
 
