--- a/src/apps/NotificationWindow/project.yml
+++ b/src/apps/NotificationWindow/project.yml
@@ -28,6 +28,7 @@ targets:
         compilerFlags:
           - -Wall
           - -Werror
+      - path: ../../vendor/cget/src/pqrs/osx/process_info
       - path: Resources
         excludes:
           - .gitignore
