--- a/src/Makefile
+++ b/src/Makefile
@@ -4,6 +4,7 @@ all:
 	$(MAKE) -C apps/Menu
 	$(MAKE) -C apps/MultitouchExtension
 	$(MAKE) -C apps/NotificationWindow
+	$(MAKE) -C apps/Services
 	$(MAKE) -C apps/SettingsWindow
 	$(MAKE) -C bin/cli
 	$(MAKE) -C core/console_user_server
@@ -17,6 +18,7 @@ clean:
 	$(MAKE) -C apps/Menu clean
 	$(MAKE) -C apps/MultitouchExtension clean
 	$(MAKE) -C apps/NotificationWindow clean
+	$(MAKE) -C apps/Services clean
 	$(MAKE) -C apps/SettingsWindow clean
 	$(MAKE) -C bin/cli clean
 	$(MAKE) -C core/console_user_server clean
