Move files/LaunchAgents, files/LaunchDaemons into src/apps/Services

--- a/src/apps/Services/Makefile
+++ b/src/apps/Services/Makefile
@@ -2,9 +2,13 @@ all:
 	python3 ../../../scripts/update_version.py
 	xcodegen generate
 	xcodebuild -configuration Release -alltargets SYMROOT="$(CURDIR)/build"
+# Copy LaunchAgents
+	mkdir -p build/Release/Karabiner-Elements-Services.app/Contents/Library/LaunchAgents
+	cp LaunchAgents/*.plist build/Release/Karabiner-Elements-Services.app/Contents/Library/LaunchAgents
 # Copy LaunchDaemons
 	mkdir -p build/Release/Karabiner-Elements-Services.app/Contents/Library/LaunchDaemons
 	cp ../../vendor/Karabiner-DriverKit-VirtualHIDDevice/files/LaunchDaemons/org.pqrs.Karabiner-VirtualHIDDevice-Daemon.plist build/Release/Karabiner-Elements-Services.app/Contents/Library/LaunchDaemons
+	cp LaunchDaemons/*.plist build/Release/Karabiner-Elements-Services.app/Contents/Library/LaunchDaemons
 
 clean:
 	rm -rf *.xcodeproj
