--- a/src/apps/Services/LaunchAgents/org.pqrs.service.agent.karabiner_session_monitor.plist
+++ b/src/apps/Services/LaunchAgents/org.pqrs.service.agent.karabiner_session_monitor.plist
@@ -3,12 +3,12 @@
 <plist version="1.0">
   <dict>
     <key>Label</key>
-    <string>org.pqrs.karabiner.NotificationWindow</string>
+    <string>org.pqrs.service.agent.karabiner_session_monitor</string>
     <key>KeepAlive</key>
     <true/>
     <key>ProgramArguments</key>
     <array>
-      <string>/Library/Application Support/org.pqrs/Karabiner-Elements/Karabiner-NotificationWindow.app/Contents/MacOS/Karabiner-NotificationWindow</string>
+      <string>/Library/Application Support/org.pqrs/Karabiner-Elements/bin/karabiner_session_monitor</string>
     </array>
   </dict>
 </plist>
