--- a/src/apps/Services/Makefile
+++ b/src/apps/Services/Makefile
@@ -16,3 +16,10 @@ clean:
 
 xcode:
 	open *.xcodeproj
+
+install:
+	bash ../../../scripts/codesign.sh build/Release
+
+	sudo rsync -a --delete \
+		build/Release/Karabiner-Elements-Services.app \
+		'/Library/Application Support/org.pqrs/Karabiner-Elements'
