--- a/src/core/console_user_server/Makefile
+++ b/src/core/console_user_server/Makefile
@@ -8,5 +8,6 @@ clean:
 	rm -fr build
 
 install: all
+	bash ../../../scripts/codesign.sh build/Release/karabiner_console_user_server
 	sudo install -m 755 build/Release/karabiner_console_user_server '/Library/Application Support/org.pqrs/Karabiner-Elements/bin/karabiner_console_user_server'
-	sudo killall karabiner_console_user_server
+	-sudo killall karabiner_console_user_server
