--- a/src/apps/MultitouchExtension/Makefile
+++ b/src/apps/MultitouchExtension/Makefile
@@ -13,3 +13,10 @@ xcode:
 
 run:
 	./build/Release/Karabiner-MultitouchExtension.app/Contents/MacOS/Karabiner-MultitouchExtension --show-ui
+
+install:
+	bash ../../../scripts/codesign.sh build/Release
+
+	sudo rsync -a --delete \
+		build/Release/Karabiner-MultitouchExtension.app \
+		'/Library/Application Support/org.pqrs/Karabiner-Elements'
