--- a/src/Makefile
+++ b/src/Makefile
@@ -4,7 +4,8 @@ all:
 	$(MAKE) -C apps/Menu
 	$(MAKE) -C apps/MultitouchExtension
 	$(MAKE) -C apps/NotificationWindow
-	$(MAKE) -C apps/Services
+	$(MAKE) -C apps/ServiceManager-Non-Privileged-Agents
+	$(MAKE) -C apps/ServiceManager-Privileged-Daemons
 	$(MAKE) -C apps/SettingsWindow
 	$(MAKE) -C bin/cli
 	$(MAKE) -C core/console_user_server
@@ -18,7 +19,8 @@ clean:
 	$(MAKE) -C apps/Menu clean
 	$(MAKE) -C apps/MultitouchExtension clean
 	$(MAKE) -C apps/NotificationWindow clean
-	$(MAKE) -C apps/Services clean
+	$(MAKE) -C apps/ServiceManager-Non-Privileged-Agents clean
+	$(MAKE) -C apps/ServiceManager-Privileged-Daemons clean
 	$(MAKE) -C apps/SettingsWindow clean
 	$(MAKE) -C bin/cli clean
 	$(MAKE) -C core/console_user_server clean
