Karabiner-Elements-Non-Privileged-Agents -> Karabiner-Elements Non-Privileged Agents

--- a/src/apps/ServiceManager-Privileged-Daemons/Makefile
+++ b/src/apps/ServiceManager-Privileged-Daemons/Makefile
@@ -3,9 +3,9 @@ all:
 	xcodegen generate
 	xcodebuild -configuration Release -alltargets SYMROOT="$(CURDIR)/build"
 # Copy LaunchDaemons
-	mkdir -p build/Release/Karabiner-Elements-Privileged-Daemons.app/Contents/Library/LaunchDaemons
-	cp ../../vendor/Karabiner-DriverKit-VirtualHIDDevice/files/LaunchDaemons/*.plist build/Release/Karabiner-Elements-Privileged-Daemons.app/Contents/Library/LaunchDaemons
-	cp LaunchDaemons/*.plist build/Release/Karabiner-Elements-Privileged-Daemons.app/Contents/Library/LaunchDaemons
+	mkdir -p 'build/Release/Karabiner-Elements Privileged Daemons.app/Contents/Library/LaunchDaemons'
+	cp ../../vendor/Karabiner-DriverKit-VirtualHIDDevice/files/LaunchDaemons/*.plist 'build/Release/Karabiner-Elements Privileged Daemons.app/Contents/Library/LaunchDaemons'
+	cp LaunchDaemons/*.plist 'build/Release/Karabiner-Elements Privileged Daemons.app/Contents/Library/LaunchDaemons'
 
 clean:
 	rm -rf *.xcodeproj
@@ -18,5 +18,5 @@ install:
 	bash ../../../scripts/codesign.sh build/Release
 
 	sudo rsync -a --delete \
-		build/Release/Karabiner-Elements-Privileged-Daemons.app \
+		'build/Release/Karabiner-Elements Privileged Daemons.app' \
 		'/Library/Application Support/org.pqrs/Karabiner-Elements'
