--- a/src/apps/ServiceManager-Non-Privileged-Agents/project.yml
+++ b/src/apps/ServiceManager-Non-Privileged-Agents/project.yml
@@ -1,7 +1,7 @@
-name: Karabiner-Elements-Non-Privileged-Agents
+name: Karabiner-Elements Non-Privileged Agents
 
 targets:
-  Karabiner-Elements-Non-Privileged-Agents:
+  Karabiner-Elements Non-Privileged Agents:
     settings:
       PRODUCT_BUNDLE_IDENTIFIER: org.pqrs.Karabiner-Elements-Non-Privileged-Agents
       # SMAppService requires codesigning
