--- a/src/apps/ServiceManager-Privileged-Daemons/project.yml
+++ b/src/apps/ServiceManager-Privileged-Daemons/project.yml
@@ -1,7 +1,7 @@
-name: Karabiner-Elements-Privileged-Daemons
+name: Karabiner-Elements Privileged Daemons
 
 targets:
-  Karabiner-Elements-Privileged-Daemons:
+  Karabiner-Elements Privileged Daemons:
     settings:
       PRODUCT_BUNDLE_IDENTIFIER: org.pqrs.Karabiner-Elements-Privileged-Daemons
       # SMAppService requires codesigning
