--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,6 +1,6 @@
 all:
 	bash scripts/check-cmakelists.sh
-	@for d in `find lib src -type d | sort`; do \
+	@for d in `find src -type d | sort`; do \
 		if [ -f "$$d/Makefile" ]; then \
 			echo "[Test] $$d"; \
 			make -C $$d || exit 1; \
@@ -8,7 +8,7 @@ all:
 	done
 
 clean:
-	@for d in `find lib src -type d | sort`; do \
+	@for d in `find src -type d | sort`; do \
 		if [ -f "$$d/Makefile" ]; then \
 			make -C $$d clean; \
 		fi; \
