--- a/tests/src/configuration_monitor/Makefile
+++ b/tests/src/configuration_monitor/Makefile
@@ -1,7 +1,6 @@
 all: build_make
-	./build/karabiner_test
+	MallocNanoZone=0 ./build/karabiner_test
 
 clean: clean_builds
 
 include ../Makefile.rules
-
