Support open_application in console_user_server

--- a/src/core/console_user_server/project.yml
+++ b/src/core/console_user_server/project.yml
@@ -25,5 +25,6 @@ targets:
           - '-std=c++20'
       - path: ../../vendor/cget/src/pqrs/osx/frontmost_application_monitor
       - path: ../../vendor/cget/src/pqrs/osx/process_info
+      - path: ../../vendor/cget/src/pqrs/osx/workspace
     dependencies:
       - framework: Carbon.framework
