--- a/src/apps/SettingsWindow/Makefile
+++ b/src/apps/SettingsWindow/Makefile
@@ -1,22 +1,15 @@
 all:
 	python3 ../../../scripts/update_version.py
 	make -C ../../lib/libkrbn
-	bash run-xcodegen.sh
+	xcodegen generate
 	xcodebuild -configuration Release -alltargets SYMROOT="$(CURDIR)/build"
 
-clean: purge-swift-package-manager-cache
+clean:
 	rm -fr *.xcodeproj
 	rm -fr build
 
-purge-swift-package-manager-cache:
-	rm -fr ~/Library/Developer/Xcode/DerivedData/Karabiner-Elements-*
-	rm -fr ~/Library/Caches/org.swift.swiftpm/repositories/Sparkle-*
-
 run:
 	./build/Release/Karabiner-Elements.app/Contents/MacOS/Karabiner-Elements
-
-run-checkForUpdatesInBackground:
-	./build/Release/Karabiner-Elements.app/Contents/MacOS/Karabiner-Elements checkForUpdatesInBackground
 
 xcode:
 	open *.xcodeproj
