--- a/src/apps/Menu/Resources/Info.plist.in
+++ b/src/apps/Menu/Resources/Info.plist.in
@@ -22,10 +22,8 @@
     <string>@VERSION@</string>
     <key>LSMinimumSystemVersion</key>
     <string>$(MACOSX_DEPLOYMENT_TARGET)</string>
-    <key>NSMainNibFile</key>
-    <string>MainMenu</string>
-    <key>NSPrincipalClass</key>
-    <string>NSApplication</string>
+    <key>NSSupportsSuddenTermination</key>
+    <true/>
     <key>LSUIElement</key>
     <true/>
   </dict>
