Migrating GamePadViewer to the SwiftUI life cycle

--- a/appendix/GamePadViewer/Resources/Info.plist.in
+++ b/appendix/GamePadViewer/Resources/Info.plist.in
@@ -22,9 +22,7 @@
     <string>@VERSION@</string>
     <key>LSMinimumSystemVersion</key>
     <string>$(MACOSX_DEPLOYMENT_TARGET)</string>
-    <key>NSMainNibFile</key>
-    <string>MainMenu</string>
-    <key>NSPrincipalClass</key>
-    <string>NSApplication</string>
+    <key>NSSupportsSuddenTermination</key>
+    <true/>
   </dict>
 </plist>
