--- a/src/core/console_user_server/project.yml
+++ b/src/core/console_user_server/project.yml
@@ -23,8 +23,8 @@ targets:
           - -Wall
           - -Werror
           - '-std=c++20'
-      - path: ../../vendor/vendor/src/pqrs/osx/frontmost_application_monitor
-      - path: ../../vendor/vendor/src/pqrs/osx/process_info
-      - path: ../../vendor/vendor/src/pqrs/osx/workspace
+      - path: ../../../vendor/vendor/src/pqrs/osx/frontmost_application_monitor
+      - path: ../../../vendor/vendor/src/pqrs/osx/process_info
+      - path: ../../../vendor/vendor/src/pqrs/osx/workspace
     dependencies:
       - framework: Carbon.framework
