Use pqrs::osx::workspace::open_application_by_file_path in launch_updater

--- a/appendix/GamePadViewer/project.yml
+++ b/appendix/GamePadViewer/project.yml
@@ -30,6 +30,7 @@ targets:
           - -Werror
       - path: ../../vendor/vendor/src/pqrs/osx/frontmost_application_monitor
       - path: ../../vendor/vendor/src/pqrs/osx/process_info
+      - path: ../../vendor/vendor/src/pqrs/osx/workspace
       - path: Resources
         excludes:
           - .gitignore
