--- a/appendix/dump_libkrbn/project.yml
+++ b/appendix/dump_libkrbn/project.yml
@@ -26,3 +26,4 @@ targets:
           - '-std=c++20'
       - path: ../../vendor/vendor/src/pqrs/osx/frontmost_application_monitor
       - path: ../../vendor/vendor/src/pqrs/osx/process_info
+      - path: ../../vendor/vendor/src/pqrs/osx/workspace
