--- a/src/apps/NotificationWindow/project.yml
+++ b/src/apps/NotificationWindow/project.yml
@@ -29,6 +29,7 @@ targets:
           - -Wall
           - -Werror
       - path: ../../../vendor/vendor/src/pqrs/osx/process_info
+      - path: ../../../vendor/vendor/src/pqrs/osx/workspace
       - path: Resources
         excludes:
           - .gitignore
