--- a/src/apps/SettingsWindow/project.yml
+++ b/src/apps/SettingsWindow/project.yml
@@ -1,6 +1,9 @@
 name: Karabiner-Elements
 
 packages:
+  AsyncAlgorithms:
+    url: https://github.com/apple/swift-async-algorithms
+    from: 1.0.0
   CodeEditor:
     url: https://github.com/ZeeZide/CodeEditor
     from: 1.2.6
@@ -8,21 +11,22 @@ packages:
 targets:
   Karabiner-Elements:
     settings:
-      base:
-        PRODUCT_BUNDLE_IDENTIFIER: org.pqrs.Karabiner-Elements.Settings
-        CODE_SIGN_ENTITLEMENTS: ''
-        CODE_SIGN_IDENTITY: '-'
-        CODE_SIGN_STYLE: Manual
-        HEADER_SEARCH_PATHS:
-          - ../../lib/libkrbn/include
-        OTHER_LDFLAGS:
-          - -L../../lib/libkrbn/build/Release
-          - -lkrbn
-        OTHER_SWIFT_FLAGS: '-warnings-as-errors'
-        SWIFT_OBJC_BRIDGING_HEADER:
-          - src/Bridging-Header.h
-        SYSTEM_HEADER_SEARCH_PATHS:
-          - ../../../vendor/vendor/include
+      PRODUCT_BUNDLE_IDENTIFIER: org.pqrs.Karabiner-Elements.Settings
+      CODE_SIGN_ENTITLEMENTS: ''
+      CODE_SIGN_IDENTITY: '-'
+      CODE_SIGN_STYLE: Manual
+      HEADER_SEARCH_PATHS:
+        - ../../lib/libkrbn/include
+      OTHER_LDFLAGS:
+        - -L../../lib/libkrbn/build/Release
+        - -lkrbn
+      OTHER_SWIFT_FLAGS: '-warnings-as-errors'
+      SWIFT_OBJC_BRIDGING_HEADER:
+        - src/Bridging-Header.h
+      SYSTEM_HEADER_SEARCH_PATHS:
+        - ../../../vendor/vendor/include
+      DEAD_CODE_STRIPPING: 'YES'
+      #SWIFT_VERSION: '6.0'
     type: application
     platform: macOS
     deploymentTarget: 13.0
@@ -47,5 +51,6 @@ targets:
         excludes:
           - '*.icns'
     dependencies:
-      - sdk: libc++.tbd
+      - package: AsyncAlgorithms
       - package: CodeEditor
+      - sdk: libc++.tbd
